# wyatt

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml  deploy.sh  test.sh
Arduino/: Arduino.ino  Hardware.cpp  Hardware.h  IRSensor.h  Main.h  Util.h  readData.sh  writeData.sh
arduino/: Hardware.h  IRSensor.cpp  IRSensor.h  Main.h  Main.ino  Motor.cpp  Motor.h  Util.h  readData.sh  serialTest.ino  writeData.sh
arduino/serialTest/: serialTest.ino
catch/: CMakeLists.txt
docs/: CMakeLists.txt  CNAME  Doxyfile.in  _config.yml  index.md
docs/html/: AdafruitPWMServoHat_8cpp_source.html  AdafruitPWMServoHat_8h_source.html  CMakeCXXCompilerId_8cpp_source.html  CommandManager_8cpp_source.html  CommandManager_8h_source.html  Command_8cpp_source.html  Command_8h_source.html  Communicator_8cpp_source.html  Communicator_8h_source.html  DataSizeException_8h_source.html  DriveConstants_8h_source.html  DriveMotorRPM_8cpp_source.html  DriveMotorRPM_8h_source.html  DriveRobotCommand_8cpp_source.html  DriveRobotCommand_8h_source.html  DuplicateHardwareException_8h_source.html  EncoderAdapter_8cpp_source.html  EncoderAdapter_8h_source.html  EncoderMessage_8cpp_source.html  EncoderMessage_8h_source.html  EncoderSensor_8cpp_source.html  EncoderSensor_8h_source.html  Hardware_8cpp_source.html  Hardware_8h_source.html  IHardwareInterface_8h_source.html  IMessage_8h_source.html  IRangeFinderSensor_8h_source.html  ISensorManager_8h_source.html  ISensor_8h_source.html  Main_8cpp_source.html  Main_8h_source.html  MessageLengthException_8h_source.html  MismatchedMessageException_8h_source.html  MockHardwareInterface_8cpp_source.html  MockHardwareInterface_8h_source.html  MockIRRangeFinderSensorMessage_8cpp_source.html  MockIRRangeFinderSensorMessage_8h_source.html  MockIRRangeFinderSensor_8cpp_source.html  MockIRRangeFinderSensor_8h_source.html  MockSensorManager_8cpp_source.html  (+361 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+7 more)
include/: AdafruitPWMServoHat.h  Chassis.h  Command.h  CommandManager.h  CommunicationException.h  Communicator.h  DriveConstants.h  DrivetrainAdapter.h  EncoderAdapter.h  EncoderCounter.h  EncoderMessage.h  EncoderSensor.h  Hardware.h  IHardwareInterface.h  IMUInterface.h  IMessage.h  IRRangeFinderSensor.h  IRangeFinderSensor.h  ISensor.h  ISensorManager.h  ISensorManagerExceptions.h  Main.h  Message.h  MismatchedMessageException.h  MockIRRangeFinderSensor.h  MotorAdapter.h  MotorController.h  MotorMessage.h  README.md  RawSensorData.h  Robot.h  SensorManager.h  SerialPort.h  Thread.h  wiringPiInclude.h
include/commands/: Command.h  DriveDirectionCommand.h  DriveForwardSecondsCommand.h  DriveMotorRPM.h  DrivePIDCommand.h  DriveRobotCommand.h  SimpleIteratorCommand.h
include/exceptions/: DataSizeException.h  DuplicateHardwareException.h  MessageLengthException.h  MismatchedMessageException.h  NonexistentHardwareException.h
include/hardwareinterface/: AdafruitPWMServoHat.h  DrivetrainAdapter.h  EncoderAdapter.h  IHardwareInterface.h  MotorAdapter.h
include/messages/: EncoderMessage.h  IMessage.h  MotorMessage.h
include/sensors/: EncoderSensor.h  IRangeFinderSensor.h  ISensor.h  ISensorManager.h  SensorManager.h
src/: AdafruitPWMServoHat.cpp  CMakeLists.txt  Chassis.cpp  Command.cpp  CommandManager.cpp  Communicator.cpp  Communicator.h  DrivetrainAdapter.cpp  EncoderAdapter.cpp  EncoderCounter.cpp  EncoderMessage.cpp  EncoderSensor.cpp  Hardware.cpp  IMUInterface.cpp  IRRangeFinderSensor.cpp  ISensorManager.cpp  ISensorManager.h  Main.cpp  Message.cpp  Message.h  MockIRRangeFinderSensor.cpp  MotorAdapter.cpp  MotorController.cpp  MotorMessage.cpp  README.md  RawSensorData.cpp  Robot.cpp  SensorManager.cpp  SerialPort.cpp  Thread.cpp  main.cpp  main.h
src/commands/: DriveDirectionCommand.cpp  DriveForwardSecondsCommand.cpp  DriveMotorRPM.cpp  DrivePIDCommand.cpp  DriveRobotCommand.cpp  SimpleIteratorCommand.cpp
src/hardwareinterface/: AdafruitPWMServoHat.cpp  DrivetrainAdapter.cpp  EncoderAdapter.cpp  MotorAdapter.cpp  MotorController.cpp
src/messages/: EncoderMessage.cpp  MotorMessage.cpp
src/sensors/: EncoderSensor.cpp  SensorManager.cpp
test/: CMakeLists.txt  MockIRRangeFinderSensor.h  README.md  catch_main.cpp  test_example.cpp  test_main.cpp
test/mocks/: MockHardwareInterface.cpp  MockIRRangeFinderSensor.cpp  MockIRRangeFinderSensorMessage.cpp  MockSensorManager.cpp  SimpleIteratorCommand.cpp
test/mocks/include/: MockHardwareInterface.h  MockIRRangeFinderSensor.h  MockIRRangeFinderSensorMessage.h  MockSensorManager.h  SimpleIteratorCommand.h
wiringPiMock/: wiringPi.cpp  wiringPi.h  wiringPiI2C.cpp  wiringPiI2C.h  wiringSerial.cpp  wiringSerial.h
